--- a/base-app/package.json
+++ b/base-app/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "dexie": "^4.2.1",
     "dexie-react-hooks": "^4.2.0",
     "lucide-react": "^0.562.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -28,7 +29,12 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "vite": "^7.2.4"
-  }
+    "tailwindcss": "^3.4.19",
+    "vite": "^7.3.0"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
