--- a/base-app/package.json
+++ b/base-app/package.json
@@ -16,6 +16,7 @@
     "dexie-react-hooks": "^4.2.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
+    "react-context": "^0.0.3",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
